# LLM-Answer-Engine

./: .gitignore  README.md  llama_sample_code.cpp  settings.gradle.kts
.github/workflows/: build-debug-apk.yml  build-release-apk.yml  ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/llmengine/app/: LLMEngineApp.kt
app/src/main/java/com/llmengine/app/data/model/: ModelRegistry.kt  Models.kt
app/src/main/java/com/llmengine/app/data/preferences/: SecurePreferences.kt
app/src/main/java/com/llmengine/app/data/search/: BraveSearchClient.kt  TavilySearchClient.kt
app/src/main/java/com/llmengine/app/download/: ModelDownloadManager.kt
app/src/main/java/com/llmengine/app/inference/: InferenceManager.kt  LlamaInference.kt
app/src/main/java/com/llmengine/app/ui/: AppNavigation.kt  MainActivity.kt
app/src/main/java/com/llmengine/app/ui/chat/: ChatScreen.kt  ChatViewModel.kt
app/src/main/java/com/llmengine/app/ui/models/: ModelManagerScreen.kt
app/src/main/java/com/llmengine/app/ui/settings/: SettingsScreen.kt
app/src/main/java/com/llmengine/app/ui/setup/: SetupScreen.kt
app/src/main/java/com/llmengine/app/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/llmengine/app/: CoreUnitTest.kt
docs/: ARCHITECTURE.md  BUILD.md
models/: README.md
native/src/: README.md
scripts/: download_models.sh  setup_ndk.sh
